# text-queries

./: .gitignore  stack.yaml
app/: query-app.cabal
app/src/: Main.hs
query/: query.cabal
query/src/: Query.hs
query/test/: Spec.hs
