cabal-version: 1.12

name:           query
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
    Query
  hs-source-dirs:
      src
  ghc-options: -rtsopts
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , text
  default-language: Haskell2010

test-suite query-parser-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts
  build-depends:
      query
    , base >=4.7 && <5
    , hspec
    , hspec-attoparsec
  default-language: Haskell2010
